--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 spring.datasource.name=chryl
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/chryl
 spring.datasource.username=root
-spring.datasource.password=chryl
-#spring.datasource.password=DES@lM4PwXIaYZZ3UZu7FWIM7iAgICAgICAgICAgICAgICA=
+# \u52A0\u5BC6
+spring.datasource.password=DES@lM4PwXIaYZZ3UZu7FWIM7iAgICAgICAgICAgICAgICA=
 
 
 
-
+#druid
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.druid.initial-size=5
@@ -23,3 +23,9 @@ spring.datasource.druid.test-while-idle=true
 spring.datasource.druid.time-between-eviction-runs-millis=60000
 spring.datasource.druid.min-evictable-idle-time-millis=300000
 spring.datasource.druid.use-global-data-source-stat=true
+
+
+#mybatis-plus
+#mybatis-plus.mapper-locations: classpath*:/mappers/*Mapper.xml
+#mybatis-plus.global-config.db-config.id-type=auto
+#mybatis-plus.global-config.db-config.table-underline=true
